# BookCipher

./: .gitignore  BookCipherApp.py  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  THREAT_MODEL.md  TROUBLESHOOTING.md  app_version.py  book_cipher.py  cipher_core.py  hybrid_cipher.py  pyproject.toml  requirements.txt  word_cipher.py
.github/: copilot-instructions.md
bookciphyer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
icon/: BookCipher.icns
ios/BookCipheriOS/: README.md  project.yml
ios/BookCipheriOS/BookCipheriOS/: BookCipheriOSApp.swift  ContentView.swift  CorpusStore.swift  CryptoEngine.swift  Info.plist  OCRScanner.swift  OCRViewModel.swift  TokenFormats.swift
ios/BookCipheriOS/BookCipheriOS.xcodeproj/: project.pbxproj
ios/BookCipheriOS/BookCipheriOS.xcodeproj/project.xcworkspace/xcuserdata/evanbushnell.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BookCipheriOS/BookCipheriOS.xcodeproj/xcuserdata/evanbushnell.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/BookCipheriOS/BookCipheriOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
tests/: test_book_cipher_app.py  test_cipher_core.py
